bug fixed (SyntaxError: Unexpected token < in JSON at position 0). meal categories section, horizontal scroll on mobile view

--- a/recipe/src/App.scss
+++ b/recipe/src/App.scss
@@ -1,13 +1,10 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-
-
-main{
-  background-color: aliceblue;
+main {
   padding: 5px;
   display: flex;
   justify-content: center;
@@ -15,40 +12,74 @@ main{
 }
 
 @media only all and (max-width: 600px) {
-  main{
+  main {
     height: 100vh;
   }
-.ui.card{
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-  width: 100%;
-  margin: 12px;
-}
-#image{
-  width: 100%;
-  height: 60%;
-}
-#meal-name{
-  font-weight: bolder;
-  font-family: 'Poppins', sans-serif;
-  font-size: 15px;
-  font-weight: 590;
-  color: rgb(39, 94, 89);
-  height: 35px;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  background: white;
-}
-.recipe-of-the-day{
-  position: absolute;
-  top:10rem;
-  left: 17px;
-  z-index: 20;
-  background-color: white;
-  padding: 0.25rem 1rem;
-  border-top-right-radius: 4px;
-  border-bottom-right-radius: 4px;
-  color:grey;
-  padding: 10px;
-}
+  .ui.card {
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    width: 90%;
+    padding: 5px;
+  }
+  #meal-name {
+    font-family: "Poppins", sans-serif;
+    font-size: 16px;
+    font-weight: 590;
+    color: rgb(39, 94, 89);
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    background: white;
+    font-weight: bolder;
+  }
+  .recipe-of-the-day {
+    position: absolute;
+    bottom: 4rem;
+    z-index: 20;
+    background-color: rgb(255, 255, 255);
+    padding: 0.25rem 1rem;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    color: grey;
+    padding: 8px;
+    font-size: 14px;
+    font-family: "Poppins", sans-serif;
+  }
+  #category-section {
+    height: 200px;
+    display: flex;
+    overflow-y: auto;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    background-color: rgb(245, 249, 252);
+  }
+
+  #category-section .category-box {
+    min-width: 110px;
+    line-height: 10px;
+    text-align: center;
+  }
+
+  #category-section::-webkit-scrollbar {
+    display: none;
+  }
+
+  .category-image {
+    border-radius: 50%;
+    max-width: 90px;
+    height: 90px;
+    border: 2px solid rgb(255, 255, 255);
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+      rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    background-size: cover;
+    background-position: center;
+    object-fit: cover;
+  }
+  .category-name {
+    font-size: 15px;
+    font-weight: bold;
+    text-align: center;
+    margin: 15px;
+    color: rgb(39, 94, 89);
+  }
 }
